import-deploy: fix overflow of config names

--- a/src/app/modules/imports/import-deploy-edit-dialog/import-deploy-edit-dialog.component.css
+++ b/src/app/modules/imports/import-deploy-edit-dialog/import-deploy-edit-dialog.component.css
@@ -16,3 +16,7 @@
 .inline {
     padding-top: 1.5em;
 }
+
+.hide-overflow {
+    overflow: hidden;
+}
